[workspace]
resolver = "2"
members = [
   "zvt", 
   "zvt_builder",
   "zvt_cli", 
   "zvt_derive",
   "zvt_feig_terminal",
]

[workspace.package]
version = "1.0.0"
authors = ["Qwello GmbH <embedded-team@qwello.eu>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/qwello/zvt/"
categories = ["finance", "embedded", "hardware-support"]
keywords = ["zvt", "ecr", "payment", "payment-terminal", "feig"]
