load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library", "rust_test")
load("@crate_index//:defs.bzl", "all_crate_deps")

rust_library(
    name = "zvt",
    srcs = glob(["src/**/*.rs"]),
    crate_name = "zvt",
    edition = "2021",
    proc_macro_deps = all_crate_deps(proc_macro = True) + ["//zvt_derive"],
    visibility = ["//visibility:public"],
    deps = all_crate_deps() + ["//zvt_builder"],
)

rust_test(
    name = "zvt_test",
    srcs = [],
    crate = ":zvt",
    data = glob(["data/*.blob"]),
    edition = "2021",
    proc_macro_deps = all_crate_deps(proc_macro = True),
    deps = all_crate_deps(normal_dev = True),
)
