[package]
name = "zvt"
edition = "2021"
authors.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
description = """
A crate to interact with payment terminals (ECRs) that use the ZVT protocol, including stand alone commandline tools to interact with the devices.
"""

[dev-dependencies]
rstest = "0.18.2"
env_logger = "0.10.1"

[dependencies]
anyhow = "1.0.70"
async-stream = "0.3.5"
chrono = "0.4.24"
futures = "0.3.28"
log = "0.4.19"
num-derive = "0.4.2"
num-traits = "0.2.19"
pretty-hex = "0.4.0"
tokio = { version = "1.29.1", features = ["net", "io-util", "rt-multi-thread", "macros"] }
tokio-stream = "0.1.14"
zvt_builder = { version = "0.1.0", path = "../zvt_builder" }
zvt_derive = { version = "0.1.0", path = "../zvt_derive" }
