load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library", "rust_test")
load("@crate_index//:defs.bzl", "all_crate_deps")

rust_library(
    name = "zvt_builder",
    srcs = glob(["src/**/*.rs"]),
    edition = "2021",
    proc_macro_deps = all_crate_deps(proc_macro = True) + ["//zvt_derive"],
    visibility = ["//zvt:__pkg__"],
    deps = all_crate_deps(normal = True),
)

rust_test(
    name = "zvt_builder_test",
    srcs = [],
    crate = ":zvt_builder",
)
