[package]
name = "zvt_builder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
hex = "0.4.3"
log = "0.4.20"
thiserror = "1.0.43"
yore = "1.0.2"
zvt_derive = { version = "0.1.0", path = "../zvt_derive" }
