[package]
name = "zvt_builder"
edition = "2021"
authors.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
description = """
A crate to interact with payment terminals (ECRs) that use the ZVT protocol, including stand alone commandline tools to interact with the devices. This is an internal dependency for the ZVT crate.
"""

[dependencies]
chrono = "0.4.26"
hex = "0.4.3"
log = "0.4.20"
thiserror = "1.0.43"
yore = "1.0.2"
zvt_derive = { version = "0.1.0", path = "../zvt_derive" }
