[package]
name = "zvt_cli"
edition = "2021"
authors.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
description = """
A crate to interact with payment terminals (ECRs) that use the ZVT protocol, including stand alone commandline tools to interact with the devices.
"""

[features]
with_lavego_error_codes = ["zvt/with_lavego_error_codes"]

[dependencies]
anyhow = "1.0.82"
argh = "0.1.12"
env_logger = "0.10.0"
log = "0.4.19"
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0.105"
tokio = { version = "1.29.1", features = ["net", "io-util", "rt-multi-thread", "macros"] }
tokio-stream = "0.1.14"
zvt = { version = "1.0.0", path = "../zvt" }
