[package]
name = "zvt_derive"
edition = "2021"
authors.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
description = """
A crate to interact with payment terminals (ECRs) that use the ZVT protokoll, including stand alone commandline tools to interact with the devices. This is an internal dependency for the ZVT crate.
"""

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.58"
quote = "1.0.27"
syn = "2.0.16"
