load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library", "rust_test")
load("@crate_index//:defs.bzl", "all_crate_deps")

rust_library(
    name = "zvt_feig_terminal",
    srcs = glob(["src/*.rs"]),
    deps = all_crate_deps() + ["//zvt"],
    proc_macro_deps = all_crate_deps(proc_macro = True),
    edition = "2021",
    visibility = ["//visibility:public"],
)

rust_test(
    name = "zvt_feig_terminal_test",
    deps = all_crate_deps(normal_dev = True),
    crate = ":zvt_feig_terminal",
)
