[package]
name = "zvt_feig_terminal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
with_lavego_error_codes = ["zvt/with_lavego_error_codes"]

[dependencies]
zvt = { version = "0.1.0", path = "../zvt" }
anyhow = "1.0.75"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread", "net", "sync"] }
log = "0.4.20"
trust-dns-client = "0.23.0"
trust-dns-proto = "0.23.0"
async-trait = "0.1.73"
env_logger = "0.10.0"
tonic = "0.8.3"
tokio-stream = "0.1.14"
serde = { version = "1.0.188", features = ["derive"] }
thiserror = "1.0.48"
time = { version = "0.3.28", features = ["macros"] }
time-macros = "0.2.14"
pin-project = "1.1.3"
futures = "0.3.28"
async-stream = "0.3.5"
mockall = "0.11.4"
mockall_double = "0.3.0"
num-traits = "0.2.17"

[dev-dependencies]
serde_json = "1.0.105"
